# scalemyprints

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc.json  APIFY_PATCH_README.md  NICHE_RADAR_README.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/extension/: README.md  package.json  tsconfig.json  vite.config.ts
apps/extension/public/: content.css  manifest.json
apps/extension/public/icons/: README.md
apps/extension/src/background/: index.ts
apps/extension/src/content/: detect-listing.ts  index.ts
apps/extension/src/popup/: index.html  index.ts  popup.css
apps/extension/src/shared/: config.ts  messages.ts  storage.ts
apps/web/: .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: login-form.tsx  page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/(marketing)/: page.tsx
apps/web/src/app/(marketing)/pricing/: page.tsx
apps/web/src/components/app/: niche-results.tsx  niche-search-form.tsx  trademark-results.tsx  trademark-search-form.tsx
apps/web/src/components/marketing/: marketing-footer.tsx  marketing-nav.tsx  pricing-card.tsx  tool-card.tsx
apps/web/src/components/providers/: query-provider.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  index.ts  input.tsx
apps/web/src/hooks/: use-niche.ts  use-trademark-search.ts
apps/web/src/lib/: api-client.ts  env.ts  risk.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/web/src/styles/: globals.css
apps/workers/: README.md  package.json  pyproject.toml  test_apify.py
apps/workers/src/scalemyprints/: __init__.py  app.py  main.py
apps/workers/src/scalemyprints/api/: __init__.py  deps.py  exception_handlers.py
apps/workers/src/scalemyprints/api/middleware/: __init__.py  auth.py  jwks.py  rate_limit.py  request_context.py
apps/workers/src/scalemyprints/api/routes/: __init__.py  health.py  niche.py  trademark.py
apps/workers/src/scalemyprints/api/schemas/: __init__.py  envelope.py  niche.py  trademark.py
apps/workers/src/scalemyprints/core/: __init__.py  config.py  errors.py  logging.py
apps/workers/src/scalemyprints/domain/: __init__.py
apps/workers/src/scalemyprints/domain/niche/: __init__.py  enums.py  models.py  ports.py  scoring_service.py  search_service.py
apps/workers/src/scalemyprints/domain/shared/: __init__.py  clock.py  result.py
apps/workers/src/scalemyprints/domain/trademark/: __init__.py  enums.py  genericness.py  models.py  ports.py  recommender.py  scorer.py  search_service.py
apps/workers/src/scalemyprints/infrastructure/: __init__.py  container.py
apps/workers/src/scalemyprints/infrastructure/cache/: __init__.py  memory.py  niche_memory.py
apps/workers/src/scalemyprints/infrastructure/common_law/: __init__.py  no_op.py
apps/workers/src/scalemyprints/infrastructure/events_data/: __init__.py  static_events.json
apps/workers/src/scalemyprints/infrastructure/llm/: __init__.py  niche_expander.py
apps/workers/src/scalemyprints/infrastructure/niche_apis/: __init__.py  apify_etsy.py  etsy_public.py  google_trends.py  static_events.py
apps/workers/src/scalemyprints/infrastructure/trademark_apis/: __init__.py  base.py  euipo.py  ipau.py  marker.py  normalizers.py  tmview.py  ukipo.py  uspto.py
apps/workers/tests/: conftest.py
apps/workers/tests/domain/niche/: conftest.py  test_scoring_service.py  test_search_service.py
apps/workers/tests/fixtures/: __init__.py
apps/workers/tests/infrastructure/niche_apis/: test_apify_etsy.py  test_etsy_public.py  test_etsy_public_http.py  test_niche_cache.py  test_niche_expander.py  test_static_events.py
apps/workers/tests/integration/: conftest.py  test_health_api.py  test_niche_api.py  test_trademark_api.py
apps/workers/tests/unit/domain/shared/: test_clock.py  test_result.py
apps/workers/tests/unit/domain/trademark/: test_enums.py  test_genericness.py  test_recommender.py  test_scorer.py  test_search_service.py
apps/workers/tests/unit/infrastructure/cache/: test_memory.py
apps/workers/tests/unit/infrastructure/common_law/: test_no_op.py
apps/workers/tests/unit/infrastructure/trademark_apis/: test_euipo.py  test_ipau.py  test_normalizers.py  test_uspto.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  KNOWN_ISSUES.md
infra/docker/: Dockerfile.workers  docker-compose.yml
infra/scripts/: deploy.sh
infra/supabase/: config.toml
infra/supabase/migrations/: 20260101000000_initial_phase_a.sql  20260428000000_niche_radar_phase_a.sql
(+6 files in other folders)
