[project]
name = "scalemyprints-workers"
version = "0.1.0"
description = "ScaleMyPrints backend workers - Python FastAPI services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "ScaleMyPrints" }]

dependencies = [
    # Core framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",

    # HTTP client
    "httpx>=0.27.0",
    "tenacity>=8.2.3",         # Retry with exponential backoff

    # Database
    "supabase>=2.4.0",
    "postgrest>=0.16.1",

    # Security
    "cryptography>=42.0.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Caching
    "redis>=5.0.3",            # Used when CACHE_PROVIDER=redis
    "cachetools>=5.3.3",       # In-memory fallback

    # Observability
    "sentry-sdk[fastapi]>=1.44.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # LLM providers (Phase A: OpenAI primary)
    "openai>=1.14.2",

    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",           # Fast JSON
]

[project.optional-dependencies]
# Scraping (optional — Phase B+)
scraping = [
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "fake-useragent>=1.5.1",
]

# Additional LLM providers (optional)
llm-extras = [
    "anthropic>=0.21.3",
    "google-generativeai>=0.4.1",
    "groq>=0.5.0",
]

# Development & testing
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "freezegun>=1.4.0",        # Date/time mocking
    "respx>=0.21.0",            # HTTP mocking for httpx

    # Linting & formatting
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scalemyprints"]

# -----------------------------------------------------------------------------
# Ruff — fast linter + formatter (replaces black, isort, flake8)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PIE",  # flake8-pie
    "PL",   # pylint
    "TRY",  # tryceratops (exception best practices)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (fine in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic numbers (sometimes unavoidable)
    "TRY003",  # long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR", "ARG", "TRY"]

[tool.ruff.lint.isort]
known-first-party = ["scalemyprints"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -----------------------------------------------------------------------------
# mypy — strict type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=scalemyprints",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that hit real external services",
    "slow: tests that take > 1 second",
]

[tool.coverage.run]
source = ["src/scalemyprints"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
